# ctest-gtest

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: add.hpp  awesome.hpp  sub.hpp
lib/: CMakeLists.txt
test/: CMakeLists.txt  gtest.cmake
test/add/: CMakeLists.txt  main.cpp
test/awesome/: CMakeLists.txt  main.cpp
test/sub/: CMakeLists.txt  main.cpp
util/: CMakeLists.txt  awesome.cpp
